[package]
name = "tokio_solicit"
version = "0.0.1"
authors = ["mlalic"]

[dependencies]
log = "0.3.6"
futures = "0.1"
tokio-core = "0.1"
tokio-proto = { git = "https://github.com/tokio-rs/tokio-proto" }
tokio-service = "*"

openssl = { version = "0.9", features = ["v102", "v110"] }
tokio-openssl = "0.1"

solicit = { git = "https://github.com/mlalic/solicit" }

[dev-dependencies]
env_logger = "*"
